--- a/kamla.html
+++ b/kamla.html
@@ -26,7 +26,7 @@
             <div class="section__two">
                 <div class="section__two--heading">
                     <h2>Kamla</h2>
-                    <img class="pet" src="css/2.png">
+                    <img class="pet" src="css/2.png" width="200" height="200">
                 </div>
                 <div class="section__two--info">
                     <p><b>Name: </b>Kamla Jain</p>
